--- a/tex/classicalTuring.tex
+++ b/tex/classicalTuring.tex
@@ -7,7 +7,7 @@
 
 
 
-A \textbf{Turing Machine} is a 7-tuple, ($Q$, $\Sigma$, $\Gamma$, $\delta$, $q_0$, $q_accept$, $q_reject$) where $Q$, $\Sigma$, $\Gamma$ are all finite sets and
+A \textbf{Turing Machine} is a 7-tuple, ($Q$, $\Sigma$, $\Gamma$, $\delta$, $q_0$, $q_{accept}$, $q_{reject}$) where $Q$, $\Sigma$, $\Gamma$ are all finite sets and
 
 \begin{enumerate}
     \item $Q$ is the set of states
